css/receiving-rides.css
.top-section {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: baseline;
    flex-flow: column;
    justify-content: center;
}

/* #receiving-rides-top {
    background: url("../images/receiving-rides-cover-pic.png");
    background-repeat: no-repeat;
    background-size: cover;
} */

.top-info {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    margin: 5rem 5rem;
}

.top-header {
    color: #100F0F, 100%;
    font-size: 3.5rem;
    font-family: 'Open Sans', sans-serif;
}

.apply-button {
    background: #5C6E93;
    color: white;
    font-family: 'Open Sans', sans-serif;
    border-radius: 36px;
    font-size: 1.8rem;
    border: none;
    padding: 1rem 1.5rem;
    margin: 1rem;
}

.steps-section {
    display: flex;
    justify-content: center;
    font-family: 'Open Sans', sans-serif;
}

.steps-content {
    width: 70%;
}

.steps-header {
    padding: 3rem 0rem;
}

.steps-body {
    display: flex;
    justify-content: space-between;
}

.steps-timeline {
     width: 50%;
     height: auto;
}

.steps-name {
    font-size: 2.5rem;
    font-style: normal;
    font-weight: normal;
    color: #5C6E93;
    padding-bottom: 1rem;
}

.steps-underline {
    border-bottom: 1px solid black;
    width: 10rem;
}

.steps-img {
    height: 70%;
}

.steps-timeline {
    padding-left: 2rem;
    margin-bottom: 5rem;
}

.steps-bullet {
    position: relative;
    margin: 0;
    padding-bottom: 1rem;
    list-style-type: square;
    font-size: 4rem;
}

.steps-bullet:before {
    width: 1px;
    height: 100%;
    content: "";
    position: absolute;
    left: -3.1rem;
    border-left: 1px solid black;
}

.steps-bullet:first-child:before {
    top: 3rem;
}

.steps-bullet:last-child:before {
    height: 3.5rem;
}

.steps-subtitle {
    font-style: normal;
    font-weight: normal;
    font-size: 2.5rem;
}

.steps-sub-info {
    font-style: normal;
    font-weight: normal;
    color:#807C7C;
    font-size: 1.5rem;
    margin-top: 1rem;
    width: 90%;
}

.steps-button {
    background: #5C6E93;
    color: white;
    font-style: normal;
    font-weight: normal;
    border-radius: 15px;
    font-size: 2rem;
    border: none;
    padding: 0.8rem 1.5rem;
    margin: 2rem 0rem;
}

.page-paragraph {
    width: 60%;
    padding-top: 10rem;
    padding-bottom: 10rem;
    margin: 0 auto;
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-style: normal;
    font-size: 2.6rem;
    /* line-height: 3.5rem; */
    text-align: center;
}



@media (max-width: 1100px) {
    .top-section {
        height: 60%;
    }
    .steps-body img {
        max-height: 60rem;
    }
}
@media (max-width: 500px) {
    .top-section {
        height: 30%;
    }
    /* .top-header {
        font-size: 4rem;
    } */
    .top-info {
        margin: 2.5rem 3rem;
    }
    .steps-content {
        width: 80%;
    }
    .steps-body img {
        max-height: 40rem;
        width: 100%;
    }
    .steps-button {
        margin: 3rem 0rem;
    }
    .steps-body {
        display: flex;
        justify-content: center;
        flex-direction: column;
    }
    .steps-sub-info {
        width: 100%;
    }

    .steps-timeline {
        width: 100%;
        height: auto;
        margin: 2rem 0rem;
   }

   .steps-button {
        padding: 1.5rem 2.5rem;
        margin: 2rem;
        /* font-size: 1.7rem; */
        margin-left: 20rem;
    }
  
}
@media (max-width: 370px) {
    .top-section {
        height: 30%;
    }
    .steps-body img {
        max-height: 30rem;
    }
    .steps-button {
        margin-left: 15rem;
    }
    .top-info {
        margin: 2.5rem 3rem;
    }
    
}

@media (max-width: 300px) {
    .steps-button {
        margin-left: 10rem;
    }
}
  

